k8sprjs/nextcloud/components/server-nextcloud/resources/server-nginx-nextcloud.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: server-nginx-nextcloud
spec:
  replicas: 1
  serviceName: server-nginx-nextcloud
  template:
    spec:
      containers:
      - name: fpm
        image: nextcloud:26-fpm-alpine
        ports:
        - containerPort: 9000
        lifecycle:
          postStart:
            exec:
              command:
              - "sh"
              - "-c"
              - |
                chown www-data:www-data /var/www/html/data
                apk add openrc
                start-stop-daemon --background /cron.sh
        resources:
          limits:
            memory: 2Gi
          requests:
            cpu: 1000m
        volumeMounts:
        - name: nginx-config
          subPath: zz-docker.conf
          mountPath: /usr/local/etc/php-fpm.d/zz-docker.conf
        - name: html-storage
          mountPath: /var/www/html
        - name: data-storage
          mountPath: /var/www/html/data
      - name: server
        image: nginx:1.25.1-alpine
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 256Mi
        volumeMounts:
        - name: nginx-config
          subPath: nginx.conf
          mountPath: /etc/nginx/nginx.conf
        - name: html-storage
          mountPath: /var/www/html
        - name: data-storage
          mountPath: /var/www/html/data
      - name: metrics
        image: xperimental/nextcloud-exporter:0.6.1
        ports:
        - containerPort: 9205
        resources:
          limits:
            memory: 32Mi
      hostNetwork: true
      volumes:
      - name: nginx-config
        configMap:
          name: server-nginx-nextcloud
          defaultMode: 0444
          items:
          - key: nginx.conf
            path: nginx.conf
          - key: zz-docker.conf
            path: zz-docker.conf
      - name: html-storage
        persistentVolumeClaim:
          claimName: html-server-nextcloud
      - name: data-storage
        persistentVolumeClaim:
          claimName: data-server-nextcloud
